fix alignment mobile intro

--- a/src/Intro.scss
+++ b/src/Intro.scss
@@ -10,7 +10,7 @@
     right: 0;
     margin: 0 auto;
     text-align: center;
-    width: 14em;
+    width: 100%;
     z-index: 500;
     font-size: 1.7em;
     font-weight: 400;
